--- a/app/components/documents/uploaded-document.hbs
+++ b/app/components/documents/uploaded-document.hbs
@@ -15,6 +15,7 @@
           @value={{mut @piece.name}}
         />
       </div>
+      {{#unless (eq @limitedFields true)}}
       <div class="auk-form-group">
         <Auk::Label>Document nummer</Auk::Label>
         <AuInput
@@ -22,6 +23,7 @@
           @value=""
         />
       </div>
+      {{/unless}}
       {{#unless this.loadData.isRunning}}
         <div class="auk-form-group" data-test-uploaded-document-types>
           <Auk::Label>{{t "document-type"}}</Auk::Label>
@@ -33,6 +35,7 @@
             @selected={{this.selectedDocumentType}}
           />
         </div>
+        {{#unless (eq @limitedFields true)}}
         <div class="auk-form-group" data-test-uploaded-document-types>
           <Auk::Label>Versie</Auk::Label>
           <div class="auk-radio-list auk-radio-list--inline">
@@ -83,6 +86,7 @@
             </label>
           </div>
         </div>
+        {{/unless}}
       {{/unless}}
     </div>
   {{/if}}
