KAS-4331 make decision text dependent on decision result on first creation + missing service

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -69,9 +69,16 @@
   @confirmIcon="trash"
   @alert={{true}}
 />
-{{#if this.setDecisionResultCode.isRunning}}
+{{#if
+  (or
+    this.setDecisionResultCode.isRunning this.updateDecisionPiecePart.isRunning
+  )
+}}
   <Auk::Modal @size="medium">
-    <Auk::Modal::Header @title={{t "saving-decision-result-title"}} @closeable={{false}} />
+    <Auk::Modal::Header
+      @title={{t "saving-decision-result-title"}}
+      @closeable={{false}}
+    />
     <Auk::Modal::Body>
       <Auk::Loader @message={{t "saving-decision-result-message"}} />
     </Auk::Modal::Body>
