--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -49,7 +49,7 @@
                   {{on "click" this.updateEditorContent}}
                 >{{t "update-thing" thing=(t "content")}}</AuButton>
                 <VersionsDropdown
-                  @record={{this.currentPiecePart.value}}
+                  @record={{this.currentPiecePart.htmlContent}}
                   @previousVersionKey="previousPiecePart"
                   @onVersionClicked={{this.revertToVersion}}
                 />
@@ -118,14 +118,14 @@
               />
             {{/if}}
           </Auk::Panel::Body>
-          {{#if (and (user-may "manage-minutes") this.currentPiecePart.value)}}
+          {{#if (and (user-may "manage-minutes") this.currentPiecePart.htmlContent)}}
             <Auk::Panel::Body
               class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
             >
               <AuContent>
                 <SanitizeHtml
                   @raw={{true}}
-                  @value={{this.currentPiecePart.value.value}}
+                  @value={{this.currentPiecePart.value.htmlContent}}
                 />
               </AuContent>
             </Auk::Panel::Body>
