update subcase header

--- a/app/components/cases/edit-case.hbs
+++ b/app/components/cases/edit-case.hbs
@@ -7,6 +7,7 @@
     <div class="auk-form-group ">
       <Auk::Label>{{t "short-title-case"}}</Auk::Label>
       <Auk::Textarea @rows="2" @value={{mut this.shortTitle}} />
+      {{@decisionmakingFlow}}
     </div>
   </Auk::Modal::Body>
   <Auk::Modal::Footer
