--- a/app/components/subcases/subcases-overview-header.hbs
+++ b/app/components/subcases/subcases-overview-header.hbs
@@ -16,7 +16,7 @@
           <span class="auk-overline auk-u-block">
             {{t "case"}}
           </span>
-          <h4 class="auk-toolbar-complex__title">
+          <h4 class="auk-toolbar-complex__title au-u-padding-none">
             <Auk::AbbreviatedText
               @text={{or @decisionmakingFlow.case.shortTitle @decisionmakingFlow.case.title}}
               @maxLength={{250}}
@@ -122,7 +122,7 @@
   <Cases::EditCase
     @onClose={{this.closeEditCaseModal}}
     @onSave={{this.saveCase}}
-    @case={{this.case}}
+    @case={{@decisionmakingFlow.case}}
   />
 {{/if}}
 
