--- a/app/components/subcases/subcases-overview-header.hbs
+++ b/app/components/subcases/subcases-overview-header.hbs
@@ -122,7 +122,7 @@
   <Cases::EditCase
     @onClose={{this.closeEditCaseModal}}
     @onSave={{this.saveCase}}
-    @case={{@decisionmakingFlow.case}}
+    @case={{this.case}}
   />
 {{/if}}
 
@@ -130,8 +130,8 @@
   @modalOpen={{this.isArchivingCase}}
   @title={{t "archive-case"}}
   @message={{t "archive-case-message"}}
-  @onConfirm={{this.closeArchiveCaseModal}}
-  @onCancel={{this.closeArchiveCaseModal}}
+  @onConfirm={{this.archiveCase}}
+  @onCancel={{this.cancelArchiveCase}}
   @confirmMessage={{t "delete"}}
   @alert={{true}}
 />
