--- a/app/components/cases/new-subcase-form.hbs
+++ b/app/components/cases/new-subcase-form.hbs
@@ -248,72 +248,155 @@
         </Auk::Panel::Header>
         <Auk::Panel::Body class="au-c-panel-grid">
           {{#each this.selectedCurrentMinisters as |minister|}}
-            {{#if (or (eq minister.fullName 'Jan Jambon')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Jan Jambon')}}
               <Auk::CheckboxTree
                 @label='Buitenlandse Zaken, Cultuur, Digitalisering en Facilitair Management'
                 @items={{this.JanJambon}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleJanJambon}}
+                {{will-destroy this.toggleJanJambon}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Hilde Crevits')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Hilde Crevits')}}
               <Auk::CheckboxTree
                 @label='Welzijn, Volksgezondheid en Gezin'
                 @items={{this.HildeCrevits}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleHildeCrevits}}
+                {{will-destroy this.toggleHildeCrevits}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Bart Somers')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Bart Somers')}}
               <Auk::CheckboxTree
                 @label='Binnenlands Bestuur, Bestuurszaken, Inburgering en Gelijke Kansen'
                 @items={{this.BartSomers}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleBartSomers}}
+                {{will-destroy this.toggleBartSomers}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Ben Weyts')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Ben Weyts')}}
               <Auk::CheckboxTree
                 @label='Onderwijs, Sport, Dierenwelzijn en Vlaamse Rand'
                 @items={{this.BenWeyts}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleBenWeyts}}
+                {{will-destroy this.toggleBenWeyts}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Zuhal Demir')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Zuhal Demir')}}
               <Auk::CheckboxTree
                 @label='Justitie en Handhaving, Omgeving, Energie en Toerisme'
                 @items={{this.ZuhalDemir}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleZuhalDemir}}
+                {{will-destroy this.toggleZuhalDemir}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Matthias Diependaele')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Matthias Diependaele')}}
               <Auk::CheckboxTree
                 @label='Financiën en Begroting, Wonen en Onroerend Erfgoed'
                 @items={{this.MatthiasDiepenDaele}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleMatthiasDiepenDaele}}
+                {{will-destroy this.toggleMatthiasDiepenDaele}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Lydia Peeters')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Lydia Peeters')}}
               <Auk::CheckboxTree
                 @label='Mobiliteit en Openbare Werken'
                 @items={{this.LydiaPeeters}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleLydiaPeeters}}
+                {{will-destroy this.toggleLydiaPeeters}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Benjamin Dalle')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Benjamin Dalle')}}
               <Auk::CheckboxTree
                 @label='Brussel, Jeugd, Media en Armoedebestrijding'
                 @items={{this.BenjaminDalle}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleBenjaminDalle}}
+                {{will-destroy this.toggleBenjaminDalle}}
               />
             {{/if}}
-            {{#if (or (eq minister.fullName 'Jo Brouns')(eq this.showAllAreas true))}}
+            {{#if (eq minister.fullName 'Jo Brouns')}}
               <Auk::CheckboxTree
                 @label='Economie, Innovatie, Werk, Sociale Economie en Landbouw'
                 @items={{this.JoBrouns}}
                 @itemStructure={{hash label="fullName"}}
+                {{did-insert this.toggleJoBrouns}}
+                {{will-destroy this.toggleJoBrouns}}
               />
             {{/if}}
           {{else}}
+            {{#if (eq this.showAllAreas false)}}
             <Auk::EmptyState @message={{t "no-ministers-added"}} />
+            {{/if}}
           {{/each}}
+          {{#if (and (eq this.isJanJambon false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Buitenlandse Zaken, Cultuur, Digitalisering en Facilitair Management'
+              @items={{this.JanJambon}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isHildeCrevits false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Welzijn, Volksgezondheid en Gezin'
+              @items={{this.HildeCrevits}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isBartSomers false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Binnenlands Bestuur, Bestuurszaken, Inburgering en Gelijke Kansen'
+              @items={{this.BartSomers}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isBenWeyts false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Onderwijs, Sport, Dierenwelzijn en Vlaamse Rand'
+              @items={{this.BenWeyts}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isZuhalDemir false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Justitie en Handhaving, Omgeving, Energie en Toerisme'
+              @items={{this.ZuhalDemir}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isMatthiasDiepenDaele false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Financiën en Begroting, Wonen en Onroerend Erfgoed'
+              @items={{this.MatthiasDiepenDaele}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isLydiaPeeters false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Mobiliteit en Openbare Werken'
+              @items={{this.LydiaPeeters}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isBenjaminDalle false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Brussel, Jeugd, Media en Armoedebestrijding'
+              @items={{this.BenjaminDalle}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
+          {{#if (and (eq this.isJoBrouns false)(eq this.showAllAreas true))}}
+            <Auk::CheckboxTree
+              @label='Economie, Innovatie, Werk, Sociale Economie en Landbouw'
+              @items={{this.JoBrouns}}
+              @itemStructure={{hash label="fullName"}}
+            />
+          {{/if}}
           <div class="au-u-1-1">
             {{#if (eq this.showAllAreas true)}}
             <AuButton
