--- a/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
+++ b/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
@@ -1,4 +1,4 @@
-<div class="vl-uploaded-document">
+<div class="vl-uploaded-document" ...attributes>
   <div class="vl-uploaded-document__title">
     <AuBadge
       @icon="document"
