add subroute to link

--- a/app/templates/signatures/decisions.hbs
+++ b/app/templates/signatures/decisions.hbs
@@ -141,7 +141,7 @@
                 <AuLink
                   @skin="naked"
                   @icon="document"
-                  @route="agenda.agendaitems.agendaitem"
+                  @route="agenda.agendaitems.agendaitem.decisions"
                   @models={{array this.meeting.id this.agenda.id this.agendaitem.id}}
                 >
                   {{t "consult-agendaitem-decision"}}
