KAS-4321: removed returning of empty array when searchfilters are empty

--- a/app/components/search/results-header.hbs
+++ b/app/components/search/results-header.hbs
@@ -7,8 +7,12 @@
     >{{this.fromResultIndex}}-{{this.toResultIndex}}</strong>
     {{t "of"}}
     {{@totalNbOfItems}}
-    {{t "results-for"}}
-    <strong class="au-u-medium">"{{@searchText}}"</strong>
+    {{#if @searchText}}
+      {{t "results-for"}}
+      <strong class="au-u-medium">"{{@searchText}}"</strong>
+    {{else}}
+      {{t "results"}}
+    {{/if}}
     {{#if @searchType}}
       {{t "in"}}
       <strong>{{@searchType}}</strong>
