agenda changes: submit to VP

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -43,6 +43,13 @@
           </AuButton>
         {{/if}}
       {{/if}}
+      <AuButton
+        @skin="link"
+        role="menuitem"
+        {{on "click" @submitToVp}}
+      >
+        Doorsturen naar het Vlaams Parlement
+      </AuButton>
       {{#if (or this.currentSession.isAdmin (await this.isDeletable))}}
         <AuButton
           data-test-agendaitem-controls-action-delete
