--- a/app/components/access-level-pill.hbs
+++ b/app/components/access-level-pill.hbs
@@ -4,6 +4,7 @@
   {{#if (not this.isEditing)}}
     {{#if (not this.canEdit)}}
       <AuPill
+        @size={{@size}}
         @skin={{this.pillSkin}}
         @icon={{this.pillIcon}}
         @draft={{@isDraft}}
@@ -13,6 +14,7 @@
       </AuPill>
     {{else}}
       <AuPill
+        @size={{@size}}
         @skin={{this.pillSkin}}
         @icon={{this.pillIcon}}
         @draft={{@isDraft}}
