--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -38,10 +38,9 @@
             @currentAgenda={{this.agenda}}
             @reverseSortedAgendas={{this.reverseSortedAgendas}}
             @onDeleteAgendaitem={{this.reassignNumbersAndNavigateToNeighbouringAgendaitem}}
+            @submitToVp={{this.showVpModal}}
           />
-        {{/unless}}
-      {{/if}}
-      {{#if (eq this.agenda.status.isDesignAgenda false)}}
+        {{else}}
         <AuDropdown
           @skin="secondary"
           @title={{t "actions"}}
@@ -55,96 +54,28 @@
           >
             Doorsturen naar het Vlaams Parlement
           </AuButton>
-          {{!-- {{#if (or this.currentSession.isAdmin (await this.isDeletable))}}
-            <AuButton
-              data-test-agendaitem-controls-action-delete
-              @skin="link"
-              @alert={{true}}
-              role="menuitem"
-              {{on "click" this.toggleIsVerifying}}
-            >
-              {{t "delete"}}
-            </AuButton>
-          {{/if}} --}}
-        </AuDropdown>
-        {{#if this.vpModal}}
-          <Auk::Modal @size="medium">
-            <Auk::Modal::Header 
-              @title="Dossier controleren"
-              @onClose={{this.showVpModal}}
-            />
-            <Auk::Modal::Body>
-              <AuContent>
-                <p>De volgende zaken worden doorgestuurd:</p>
-                <ul class="au-u-margin-top">
-                  <li>
-                    Eerste principiële goedkeuring:
-                    <ul>
-                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf (getekend)</a></li>
-                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx</a></li>
-                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -ontwerpdecreet.pdf</a></li>
-                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -nota.pdf</a></li>
-                      <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -adviesnota.pdf</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    Definitieve goedkeuring:
-                    <ul>
-                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf (getekend)</a></li>
-                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx</a></li>
-                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -ontwerpdecreet.pdf (getekend)</a></li>
-                      <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -nota.pdf</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </AuContent>
-              <AuAlert
-                @title="Dit dossier mist nog:"
-                @skin="warning"
-                @icon="alert-triangle"
-                @size="small"
-                class="au-u-margin-bottom-none au-u-margin-top"
-              >
-                <AuContent>
-                  <ul>
-                    <li>Memorie van definitieve goedkeuring (in Word)</li>
-                    <li>Ontwerpdecreet definitieve goedkeuring (ondertekend)</li>
-                  </ul>
-                </AuContent>
-              </AuAlert>
-            </Auk::Modal::Body>
-            <Auk::Modal::Footer @onCancel={{this.showVpModal}}>
-              <AuButton
-                @skin="primary"
-                {{on "click" this.submitToVp}}
-              >
-                Doorsturen naar het Vlaams Parlement
-              </AuButton>
-            </Auk::Modal::Footer>
-          </Auk::Modal>
-        {{/if}}
+      </AuDropdown>
+        {{/unless}}
       {{/if}}
     </Group.Item>
   </Toolbar.Group>
 </Auk::Toolbar>
 
-{{#if (eq this.agenda.status.isDesignAgenda false)}}
-  {{#if this.vpSent}} 
-    {{#if this.isComplete}}
-    <AuAlert
-      @title="Dit dossier is volledig en doorgestuurd naar het Vlaams parlement op 29/09/2023"
-      @skin="success"
-      @icon="mail"
-      @size="small"
-    />
-    {{else}}
-    <AuAlert
-      @title="Dit dossier is onvolledig en doorgestuurd naar het Vlaams parlement op 29/09/2023"
-      @skin="success"
-      @icon="mail"
-      @size="small"
-    />
-    {{/if}}
+{{#if this.vpSent}} 
+  {{#if this.isComplete}}
+  <AuAlert
+    @title="Dit dossier is volledig en doorgestuurd naar het Vlaams parlement op 29/09/2023"
+    @skin="success"
+    @icon="mail"
+    @size="small"
+  />
+  {{else}}
+  <AuAlert
+    @title="Dit dossier is onvolledig en doorgestuurd naar het Vlaams parlement op 29/09/2023"
+    @skin="success"
+    @icon="mail"
+    @size="small"
+  />
   {{/if}}
 {{/if}}
 
@@ -177,6 +108,71 @@
     @allowEditing={{user-may "manage-agendaitems"}}
     @onSave={{this.saveGovernmentAreas}}
   />
+{{/if}}
+
+{{#if this.vpModal}}
+<Auk::Modal @size="medium">
+  <Auk::Modal::Header 
+    @title="Dossier controleren"
+    @onClose={{this.showVpModal}}
+  />
+  <Auk::Modal::Body>
+    <AuContent>
+      <p>De volgende zaken worden doorgestuurd:</p>
+      <ul class="au-u-margin-top">
+        <li>
+          Eerste principiële goedkeuring:
+          <ul>
+            <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf (getekend)</a></li>
+            <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx</a></li>
+            <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -ontwerpdecreet.pdf</a></li>
+            <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -nota.pdf</a></li>
+            <li><a href="#!" target="blank">VR 2022 2212 DOC.0357-3BIS Parkendecreet -adviesnota.pdf</a></li>
+          </ul>
+        </li>
+        <li>
+          Definitieve goedkeuring:
+          <ul>
+            <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf (getekend)</a></li>
+            <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx</a></li>
+            <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -ontwerpdecreet.pdf (getekend)</a></li>
+            <li><a href="#!" target="blank">VR 2023 3103 DOC.0357-3BIS Parkendecreet -nota.pdf</a></li>
+          </ul>
+        </li>
+      </ul>
+      <div class="auk-form-group au-u-margin-top">
+        <Auk::Label for="remarks">Opmerkingen</Auk::Label>
+        <Auk::Textarea
+          @rows="4"
+          @value=""
+          id="remarks"
+        />
+      </div>
+    </AuContent>
+    <AuAlert
+      @title="Dit dossier mist nog:"
+      @skin="warning"
+      @icon="alert-triangle"
+      @size="small"
+      class="au-u-margin-bottom-none au-u-margin-top"
+    >
+      <AuContent>
+        <ul>
+          <li>Memorie van definitieve goedkeuring (in Word)</li>
+          <li>Ontwerpdecreet definitieve goedkeuring (ondertekend)</li>
+        </ul>
+      </AuContent>
+    </AuAlert>
+  </Auk::Modal::Body>
+  <Auk::Modal::Footer @onCancel={{this.showVpModal}}>
+    <AuButton
+      @skin="primary"
+      {{on "click" this.submitToVp}}
+    >
+      Doorsturen naar het Vlaams Parlement
+    </AuButton>
+  </Auk::Modal::Footer>
+</Auk::Modal>
 {{/if}}
 
 <Agenda::Agendaitem::DecisionsSigneePanel />
