--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -109,20 +109,27 @@
         <Toolbar.Group @position="right" as |Group|>
           {{#if
             (and
-              (user-may "manage-publication-flows")
               (not this.loadPieceRelatedData.isRunning)
               (not this.loadPublicationFlowRelatedData.isRunning)
             )
           }}
             {{#if this.piece.publicationFlow}}
-              <AuPill
-                @size="small"
-                @route="publications.publication"
-                @model={{this.piece.publicationFlow.id}}
-                data-test-document-card-publication-link
-              >
-                {{this.piece.publicationFlow.identification.idName}}
-              </AuPill>
+              {{#if (user-may "manage-publication-flows")}}
+                <AuPill
+                  @size="small"
+                  @route="publications.publication"
+                  @model={{this.piece.publicationFlow.id}}
+                  data-test-document-card-publication-link
+                >
+                  {{this.piece.publicationFlow.identification.idName}}
+                </AuPill>
+              {{else}}
+                <AuPill
+                  @size="small"
+                >
+                  {{this.piece.publicationFlow.identification.idName}}
+                </AuPill>
+              {{/if}}
             {{/if}}
           {{/if}}
           <Group.Item
