feat: add publication-flows search route

--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -33,5 +33,10 @@
         {{t "newsletter"}}
       </AuNavigationLink>
     </li>
+    <li class="au-c-list-navigation__item">
+      <AuNavigationLink @route="search.publication-flows">
+        {{t "publications"}}
+      </AuNavigationLink>
+    </li>
   </ul>
 </nav>
